# ComfyUI_Preview_Magnifier

./: README.md  __init__.py  node.py  pyproject.toml
web/: image_magnifier.js
