[project]
name = "comfyui_preview_magnifier"
description = "Custom nodes that preview image with a magnifier."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ycchanau/ComfyUI_Preview_Magnifier"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Preview_Magnifier"
Icon = ""
